# IG2

./: Cargo.toml
models/: icosphere.blend  icosphere.blend1  icosphere.mtl  rainbowcube.blend  sphere.blend
shaders/: debug_shadowmap_fragment.glsl  postproc_fragment.glsl  shadowmapper_vertex.glsl  world_fragment.glsl  world_vertex.glsl
src/: main.rs  transform.rs
src/gameobjects/: collisions.rs  gameobject.rs  meshobject.rs  mod.rs  physmeshobject.rs  renderable.rs  rigidbody.rs  rigidmeshobject.rs
src/graphics/: camera.rs  framebuffer.rs  gl_error_checking.rs  graphics_engine.rs  mesh.rs  meshpool.rs  mod.rs  shader_program.rs  texture.rs
src/phys/: inertia_tensor.rs  mod.rs  physics_update.rs  spatial_acceleration_structure.rs
src/windowing/: input.rs  mod.rs  window.rs
