[package]
name = "IG2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.18.0"
libc = "0.2.0"
stb_image = "0.2.5"
gl46 = "0.2.1"
lazy_static = "1.4.0"
tobj = "4.0.0"
fxhash = "0.2.1"
rayon = "1.7.0"
rlua = "0.19.7"
once_cell = "1.18.0"
strum = "0.25"
strum_macros = "0.25"

[dependencies.glfw]
version = "*"
default-features = false
